<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity_add_bookstore">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bookstore"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#FF007F"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_marginTop="16dp"
        android:hint="@string/bookstore_name"
        android:textColor="#FF007F"
        android:textColorHint="#FFCCE5"
        android:backgroundTint="#FF007F"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etBooks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/number_of_books"
        android:textColor="#FF007F"
        android:textColorHint="#FFCCE5"
        android:backgroundTint="#FF007F"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/average_price"
        android:textColor="#FF007F"
        android:textColorHint="#FFCCE5"
        android:backgroundTint="#FF007F"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/etBooks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/cbOpen24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/open_24h"
        android:textColor="#FF007F"
        app:layout_constraintTop_toBottomOf="@id/etPrice"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/cbOpen24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnPickDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/opening_date"
        android:backgroundTint="#FF007F"
        app:layout_constraintTop_toBottomOf="@id/spType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF007F"
        android:text="@string/save_btn"
        app:layout_constraintTop_toBottomOf="@id/btnPickDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>